--- a/Android Architecture Components & Jetpack/MVVMRetrofitRoom/app/src/main/AndroidManifest.xml
+++ b/Android Architecture Components & Jetpack/MVVMRetrofitRoom/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
+        android:largeHeap="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".common.QuoteApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVMRetrofitRoom"
         tools:targetApi="31">
